--- a/teamsapp/index.html
+++ b/teamsapp/index.html
@@ -33,6 +33,9 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+  <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+    <h1>جاري التحميــــــــــــل</h1>
+  </div>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
