--- a/teamsapp/index.html
+++ b/teamsapp/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
   <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-    <h1>جاري التحميــــــــــــل</h1>
+    <h1>جاري التحميــــل .. رجاء الإنتظار</h1>
   </div>
   <script src="flutter_bootstrap.js" async></script>
 </body>
